log/build_2025-10-18_20-49-42/planner/stderr.log
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp: In member function ‘plan::Plan plan::Planner::plan(predict::Target, double)’:
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::fire’ [-Wmissing-field-initializers]
   55 |     return {false};
      |                  ^
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::target_yaw’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::target_pitch’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::yaw’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::yaw_vel’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::yaw_acc’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::pitch’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::pitch_vel’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:55:18: warning: missing initializer for member ‘plan::Plan::pitch_acc’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp: In member function ‘plan::Plan plan::Planner::plan(std::optional<predict::Target>, double)’:
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::fire’ [-Wmissing-field-initializers]
   98 |   if (!target.has_value()) return {false};
      |                                         ^
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::target_yaw’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::target_pitch’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::yaw’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::yaw_vel’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::yaw_acc’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::pitch’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::pitch_vel’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:98:41: warning: missing initializer for member ‘plan::Plan::pitch_acc’ [-Wmissing-field-initializers]
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp: At global scope:
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:156:48: error: ‘Target’ does not name a type
  156 | Eigen::Matrix<double, 2, 1> Planner::aim(const Target & target, double bullet_speed)
      |                                                ^~~~~~
/home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:156:29: error: no declaration matches ‘Eigen::Matrix<double, 2, 1> plan::Planner::aim(const int&, double)’
  156 | Eigen::Matrix<double, 2, 1> Planner::aim(const Target & target, double bullet_speed)
      |                             ^~~~~~~
In file included from /home/guo/ITL_sentry_auto_new/src/core/planner/src/planner.cpp:1:
/home/guo/ITL_sentry_auto_new/src/core/planner/include/planner.hpp:54:31: note: candidate is: ‘Eigen::Matrix<double, 2, 1> plan::Planner::aim(const predict::Target&, double)’
   54 |   Eigen::Matrix<double, 2, 1> aim(const predict::Target & target, double bullet_speed);
      |                               ^~~
/home/guo/ITL_sentry_auto_new/src/core/planner/include/planner.hpp:33:7: note: ‘class plan::Planner’ defined here
   33 | class Planner
      |       ^~~~~~~
gmake[2]: *** [CMakeFiles/planner.dir/build.make:76：CMakeFiles/planner.dir/src/planner.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/planner.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
